[package]
name = "cw721-nft-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = "1.4.1"
cw-storage-plus = "1.1.0"
cw721 = "0.18.0"
schemars = "0.8.15"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"